# sc-compose

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/agents/: arch-qa.md  flaky-test-qa.md  quality-mgr.md  registry.yaml  req-qa.md  simplification-reviewer.md  test-auditor.md
.claude/skills/codex-orchestration/: SKILL.md  dev-template.xml.j2  qa-template.xml.j2  review-template.xml.j2
.claude/skills/sprint-report/: SKILL.md
.claude/skills/team-lead/: SKILL.md  backup-and-restore-team.md  general-task-template.xml.j2
.github/workflows/: ci.yml  release-preflight.yml  release.yml
.winget/: sc-compose.yaml
crates/sc-compose/: Cargo.toml
crates/sc-compose/src/: exit_codes.rs  json_output.rs  main.rs  observability.rs  observer_impl.rs  render_request.rs  template_store.rs
crates/sc-compose/src/commands/: examples.rs  mod.rs  templates.rs
crates/sc-compose/tests/: cli.rs  json_cli.rs  repo_boundaries.rs
crates/sc-composer/: Cargo.toml
crates/sc-composer/src/: composer.rs  diagnostics.rs  error.rs  frontmatter.rs  frontmatter_init.rs  include.rs  include_engine.rs  init_workspace.rs  lib.rs  observer.rs  pipeline.rs  renderer.rs  resolver.rs  types.rs  validate.rs  validation.rs
docs/: WINGET_SETUP.md  architecture.md  atm-adapter-notes.md  cross-platform-guidelines.md  error-code-registry.md  html-sprint-report-plan.md  migration-notes.md  project-plan.md  publishing-agent.md  publishing.md  release-checklist.md  requirements.md  test-strategy.md  traceability-matrix.md
examples/: agent-task-branching.xml.j2  frontmatter-demo.md.j2  hello.md.j2  pytest-fixture.py.j2  service-config.yaml.j2  sprint-report-html.html.j2  sprint-report-html.sample-vars.json
examples/hello/: hello.md.j2
pm/: arch-ccomp.md  arch-comp.md
release/: RELEASE-NOTES-TEMPLATE.md  publish-artifacts.toml
release/homebrew/: sc-compose.rb.j2
scripts/: release_artifacts.py  release_gate.sh
