[workspace]
members = ["crates/sc-composer", "crates/sc-compose"]
resolver = "2"

[workspace.package]
version = "0.46.2"
edition = "2024"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/randlee/sc-compose"
homepage = "https://github.com/randlee/sc-compose"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
minijinja = "2.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
cargo = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
map_err_ignore = "warn"
undocumented_unsafe_blocks = "warn"
