[package]
name = "sc-compose"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone CLI for template composition."

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
sc-composer = { path = "../sc-composer", version = "0.46.2" }
