[package]
name = "sc-compose"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone CLI for template composition."
readme = "../../README.md"
keywords = ["prompt", "template", "compose", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sc-composer = { path = "../sc-composer", version = "0.46.2" }
sc-observability.workspace = true
ulid.workspace = true

[lints]
workspace = true
