[package]
name = "sc-composer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone template composition library."

[dependencies]
minijinja.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2"

[lints]
workspace = true
