[package]
name = "sc-composer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standalone template composition library."
readme = "../../README.md"
keywords = ["prompt", "template", "jinja", "compose"]
categories = ["template-engine", "development-tools"]

[dependencies]
minijinja.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
